Fix Icecat refresh gating and track attribute sources